<resources>
    <string name="app_name">Tá_Com_Sede</string>
    <string name="hint_peso">Seu Peso(Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="Text_btn_Calcular">Calcular Ingestão Diária</string>
    <string name="text_btn_lembrete">LEMBRETE</string>
    <string name="text_btn_alarme">ALARME</string>
    <string name="text_hora">00</string>
    <string name="text_doispontos">:</string>
    <string name="text_minutos">00</string>
    <string name="toats_informe_peso">informe o seu peso!</string>
    <string name="toats_informe_idade">informe a sua idade!</string>
    <string name="dialog_titulo">Redefinir Dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes !?</string>
    <string name="alarme_messagem">Hora de beber Água!</string>




</resources>