<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">



<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:id="@+id/container_header"/>
    <ImageView
        android:id="@+id/Img_drinking"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/bebaagua"
        app:layout_constraintStart_toStartOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <ImageView
        android:id="@+id/ic_cleanUp"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_refresh"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="@id/container_header"
      />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/verydarkblue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColorHint="@color/verydarkblue"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        android:hint="@string/hint_peso"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/verydarkblue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColorHint="@color/verydarkblue"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"
        android:hint="@string/hint_idade"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@id/edit_peso"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Text_btn_Calcular"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:background="@drawable/bg_degrade_btn"
        app:layout_constraintTop_toBottomOf="@id/edit_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/container_resultml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_resultml"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_resultml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4500,5ml"
        android:textSize="35sp"
        android:textColor="@color/bluemariner"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/container_resultml"
        app:layout_constraintStart_toStartOf="@id/container_resultml"
        app:layout_constraintEnd_toEndOf="@id/container_resultml"
        app:layout_constraintBottom_toBottomOf="@id/container_resultml"
        />
    <Button
            android:id="@+id/btn_definir_lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_lembrete"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/verydarkblue"
            app:layout_constraintTop_toBottomOf="@id/container_resultml"
            app:layout_constraintStart_toStartOf="parent"
            />
    <Button
        android:id="@+id/btn_definir_Alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_alarme"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/verydarkblue"
        app:layout_constraintTop_toBottomOf="@id/container_resultml"
       
        app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hora"
            android:textSize="35sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="150dp"
            app:layout_constraintTop_toBottomOf="@id/btn_definir_lembrete"
            app:layout_constraintStart_toStartOf="parent"
            />

    <TextView
        android:id="@+id/txt_doispontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_doispontos"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/btn_definir_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_hora"
        />

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_minutos"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf = "@id/btn_definir_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_doispontos"
        />







</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>